src/objects/CO_Deposit__c.object
<CustomObject>
    <fields>
        <fullName>AccountingIdForJournalEntry__c</fullName>
        <label>AccountingIdForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountingResponseForJournalEntry__c</fullName>
        <label>AccountingResponseForJournalEntry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_Credit_Accounting_Id__c</fullName>
        <description>Used for payment type AR Credit. This will have Accounting Id of the Credit Memo/Credit Note whose unapplied credit is used as CO Invoice Payment.</description>
        <inlineHelpText>Used for payment type AR Credit. This will have Accounting Id of the Credit Memo/Credit Note whose unapplied credit is used as CO Invoice Payment.</inlineHelpText>
        <label>AR Credit Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Credit_Invoice_Accounting_Id__c</fullName>
        <description>Used for payment type AR Credit. This will have Accounting Id of the Invoice created for applying credit.</description>
        <inlineHelpText>Used for payment type AR Credit. This will have Accounting Id of the Invoice created for applying credit.</inlineHelpText>
        <label>AR Credit Invoice Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Credit_Number__c</fullName>
        <description>Used for payment type AR Credit. This will have Doc Number (INV-) of the Credit Memo/Credit Note whose unapplied credit is used as CO Invoice Payment.</description>
        <inlineHelpText>Used for payment type AR Credit. This will have Doc Number (INV-) of the Credit Memo/Credit Note whose unapplied credit is used as CO Invoice Payment.</inlineHelpText>
        <label>AR Credit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for CO Deposit</description>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Drawer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Drawer</label>
        <referenceTo>Cash_Drawer__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Reversal_of_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Reversal of Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Charge on Account</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Giftcard</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>EFTPOS</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Afterpay</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Payment Surcharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terminal__c</fullName>
	    <deleteConstraint>SetNull</deleteConstraint>
	    <label>Payment Terminal</label>
	    <referenceTo>Payment_Terminal__c</referenceTo>
	    <relationshipLabel>CO Deposits</relationshipLabel>
	    <relationshipName>CO_Deposits</relationshipName>
	    <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recorded_From__c</fullName>
        <label>Recorded From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference number from Preferred Payment Processor or user entered check/cheque or other reference number for other payment methods</description>
	    <inlineHelpText>Reference number from Preferred Payment Processor or user entered check/cheque or other reference number for other payment methods</inlineHelpText>
	    <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Deposit</label>
        <referenceTo>CO_Deposit__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reverse_Link__c</fullName>
        <label>Reverse Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <description>Used For Searching</description>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncTokenForJournalEntry__c</fullName>
        <label>SyncTokenForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unapplied_Payment_Type__c</fullName>
        <inlineHelpText>Use to define payment type for QBO/Xero. 
QB - For Unapplied Payment use AR Payment and for Unapplied Credit use AR Credit or blank value.
Xero - For pre payment use Prepayment, for Over payment use Overpayment and for Unapplied Credit use AR Credit or blank value.</inlineHelpText>
        <label>Unapplied Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR Credit</fullName>
                </value>
                <value>
                    <fullName>AR Payment</fullName>
                </value>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <description>Used for CO Deposit</description>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBJournalEntrySync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBJournalEntrySync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CO Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_CO_Deposits</fullName>
        <columns>NAME</columns>
        <columns>CO_Header__c</columns>
        <columns>CO_Invoice_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBJournalEntrySync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB CO Deposits</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_CO_Deposit</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Amount__c</columns>
        <columns>CO_Invoice_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero CO Deposit</label>
    </listViews>
    <nameField>
        <displayFormat>CODN-{00000000}</displayFormat>
        <label>CO Deposits Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>